plugins {
    id 'com.android.application'
}

android {
    namespace 'com.onemoresecret'
    compileSdk 34

    defaultConfig {
        applicationId "com.onemoresecret"
        minSdk 31
        targetSdk 34
        versionCode 27
        versionName "0.27-alpha"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    buildFeatures {
        viewBinding true
        buildConfig true
    }

    flavorDimensions = ["tier"]

    productFlavors {
        foss {
            dimension "tier"
        }

        standard {
            dimension "tier"
        }
    }
}

dependencies {
    implementation 'com.google.android.material:material:1.10.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.navigation:navigation-fragment:2.7.5'
    implementation 'androidx.navigation:navigation-ui:2.7.5'
    implementation 'androidx.biometric:biometric:1.1.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.recyclerview:recyclerview:1.3.2'
    implementation 'androidx.fragment:fragment:1.6.2'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'

    implementation 'androidx.camera:camera-core:1.4.0-alpha02'
    implementation 'androidx.camera:camera-camera2:1.4.0-alpha02'
    implementation 'androidx.camera:camera-lifecycle:1.4.0-alpha02'
    implementation 'androidx.camera:camera-video:1.4.0-alpha02'

    implementation 'androidx.camera:camera-view:1.4.0-alpha02'
    implementation 'androidx.camera:camera-extensions:1.4.0-alpha02'

    implementation 'com.google.zxing:core:3.5.2'

    implementation 'com.madgag.spongycastle:bcpkix-jdk15on:1.58.0.0'
    implementation 'com.madgag.spongycastle:bcpg-jdk15on:1.58.0.0'

    implementation 'androidx.core:core:1.12.0'
    implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
    implementation 'com.google.android.flexbox:flexbox:3.0.0'

    //Google ML Kit
    standardImplementation 'com.google.mlkit:barcode-scanning:17.2.0'
}